--- a/componentizando-a-aplicacao/package.json
+++ b/componentizando-a-aplicacao/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "challengesrocketseat",
+  "name": "componentizando-a-aplicacao",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,8 +10,7 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "sass": "^1.59.3"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
@@ -21,7 +20,6 @@
     "@vitejs/plugin-react": "^3.1.0",
     "eslint": "^8.36.0",
     "eslint-plugin-react": "^7.32.2",
-    "json-server": "^0.17.2",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
   }
