--- a/componentizando-a-aplicacao/package.json
+++ b/componentizando-a-aplicacao/package.json
@@ -6,11 +6,15 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "json-server -d 400 db.json --port 3333"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-feather": "^2.0.10",
+    "react-icons": "^4.8.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
@@ -20,6 +24,7 @@
     "@vitejs/plugin-react": "^3.1.0",
     "eslint": "^8.36.0",
     "eslint-plugin-react": "^7.32.2",
+    "json-server": "^0.17.2",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
   }
