--- a/refatorando-classes/package.json
+++ b/refatorando-classes/package.json
@@ -24,7 +24,11 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/styled-components": "^5.1.26",
+    "@typescript-eslint/eslint-plugin": "^5.57.1",
+    "@typescript-eslint/parser": "^5.57.1",
     "@vitejs/plugin-react": "^3.1.0",
+    "eslint": "^8.37.0",
+    "eslint-plugin-react": "^7.32.2",
     "json-server": "^0.17.3",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
