--- a/hook-carrinho-compras/package.json
+++ b/hook-carrinho-compras/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "carrinho-de-compras",
+  "name": "hook-carrinho-compras",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,28 +7,23 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "server": "json-server db.json -d 400 -p 3333"
+    "server": "json-server db.json -p 3333"
   },
   "dependencies": {
-    "@types/styled-components": "^5.1.26",
-    "axios": "^1.3.4",
+    "axios": "^1.3.5",
     "polished": "^4.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
-    "react-router-dom": "^6.9.0",
-    "react-toastify": "^9.1.1",
+    "react-router-dom": "^6.10.0",
+    "react-toastify": "^9.1.2",
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.56.0",
-    "@typescript-eslint/parser": "^5.56.0",
     "@vitejs/plugin-react": "^3.1.0",
-    "eslint": "^8.36.0",
-    "eslint-plugin-react": "^7.32.2",
-    "json-server": "^0.17.2",
+    "json-server": "^0.17.3",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
   }
