--- a/interface-com-chackra-ui/package.json
+++ b/interface-com-chackra-ui/package.json
@@ -6,21 +6,28 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "server": "json-server db.json -p 3333"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.6.0",
     "@emotion/react": "^11.10.8",
     "@emotion/styled": "^11.10.8",
+    "@tanstack/react-query": "^4.29.7",
     "@types/node": "18.16.3",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
+    "axios": "^1.4.0",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
     "framer-motion": "^10.12.5",
     "next": "13.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "swiper": "^9.2.4",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "json-server": "^0.17.3"
   }
 }
